--- a/Data_Preprocessing_Template.ipynb
+++ b/Data_Preprocessing_Template.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrjIa+tpv44fWmgcTX+gQC",
+      "authorship_tag": "ABX9TyPFVX9Z1Ho3RjQEGHaTWTVC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
           "height": 206
         },
         "id": "x9lSUb10beft",
-        "outputId": "a08d0aed-cc88-4a4a-9a9f-e38a124ba3c5"
+        "outputId": "993e0c65-d827-43e2-e6c9-580b06d049c7"
       },
       "execution_count": 3,
       "outputs": [
@@ -79,7 +79,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dfc0f3a9-f98b-47d3-a937-52fc0b3a2291\">\n",
+              "  <div id=\"df-4af7ceba-5d53-4a83-b080-4c2e97fc0270\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -144,7 +144,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dfc0f3a9-f98b-47d3-a937-52fc0b3a2291')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4af7ceba-5d53-4a83-b080-4c2e97fc0270')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -195,12 +195,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-dfc0f3a9-f98b-47d3-a937-52fc0b3a2291 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4af7ceba-5d53-4a83-b080-4c2e97fc0270 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-dfc0f3a9-f98b-47d3-a937-52fc0b3a2291');\n",
+              "          const element = document.querySelector('#df-4af7ceba-5d53-4a83-b080-4c2e97fc0270');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -237,7 +237,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UdFcccLxbn0U",
-        "outputId": "d0fbc7ad-eb18-4a9d-815a-ed17437d4f1d"
+        "outputId": "d8e85210-14d3-4e5d-f145-564d2ba628bf"
       },
       "execution_count": 4,
       "outputs": [
@@ -271,7 +271,7 @@
           "height": 300
         },
         "id": "dmL_xwlpbwPa",
-        "outputId": "3a402015-34b2-4509-96d3-280683ea05bd"
+        "outputId": "7ad76ceb-eb96-45f1-9e1a-1525773c540e"
       },
       "execution_count": 5,
       "outputs": [
@@ -291,7 +291,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cd224098-903a-419f-856a-6344cbf7c845\">\n",
+              "  <div id=\"df-34b33b10-8cbf-4337-9505-48776b510387\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -359,7 +359,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cd224098-903a-419f-856a-6344cbf7c845')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34b33b10-8cbf-4337-9505-48776b510387')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -410,12 +410,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cd224098-903a-419f-856a-6344cbf7c845 button.colab-df-convert');\n",
+              "          document.querySelector('#df-34b33b10-8cbf-4337-9505-48776b510387 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cd224098-903a-419f-856a-6344cbf7c845');\n",
+              "          const element = document.querySelector('#df-34b33b10-8cbf-4337-9505-48776b510387');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -452,7 +452,7 @@
       "metadata": {
         "id": "tAcrO6vucMR3"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -465,9 +465,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y4wE3K_KdUYD",
-        "outputId": "5fd8af80-0c64-450a-cea6-10a9854013fd"
+        "outputId": "65662bac-29f8-4452-8b9b-750bc0495033"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -486,7 +486,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -500,9 +500,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sif3y84HdkWJ",
-        "outputId": "f40eb33f-c88d-4c80-b72d-ed80b436d16c"
+        "outputId": "b111e05c-46aa-422e-8390-2b99befa1960"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -527,7 +527,7 @@
       "metadata": {
         "id": "zlRBN9MVdpmZ"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -540,9 +540,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3gKMvowPfFLs",
-        "outputId": "70c82578-6d10-468b-88de-6c0b68949169"
+        "outputId": "22d9ce73-65b3-4383-a682-0d90879f5d8f"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +561,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 10
         }
       ]
     },
@@ -577,7 +577,7 @@
       "metadata": {
         "id": "d3ALgvEhgMTB"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -590,9 +590,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mBJHITR3k99c",
-        "outputId": "d839e4cb-5a2b-4bcf-bb7a-77ba2d6dde50"
+        "outputId": "d44f1eed-3821-4770-9092-2fc4d4b3c054"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +611,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 12
         }
       ]
     },
@@ -627,7 +627,7 @@
       "metadata": {
         "id": "1Xe6OlWQlAB0"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -640,9 +640,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U8nJYlXloBL6",
-        "outputId": "f085b7bf-7bac-4d47-f5cd-2db9b678c674"
+        "outputId": "d72e5ffd-3ad7-4a50-f33a-ab560c99312b"
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,17 +652,230 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Splitting the dataset into the Training set and Test set\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test , y_train, y_test = train_test_split(x, y , test_size = 0.2, random_state = 1250)"
+      ],
       "metadata": {
         "id": "-_TuS-BtoB7J"
       },
-      "execution_count": null,
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "emykcNFD2JjT",
+        "outputId": "b4094939-bcba-4526-f4e7-19c7458d30d5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.0, 0.0, 1.0, 38.0, 61000.0],\n",
+              "       [1.0, 0.0, 0.0, 48.0, 79000.0],\n",
+              "       [0.0, 1.0, 0.0, 40.0, 63777.77777777778],\n",
+              "       [1.0, 0.0, 0.0, 37.0, 67000.0],\n",
+              "       [0.0, 0.0, 1.0, 27.0, 48000.0],\n",
+              "       [0.0, 1.0, 0.0, 30.0, 54000.0],\n",
+              "       [0.0, 0.0, 1.0, 38.77777777777778, 52000.0],\n",
+              "       [1.0, 0.0, 0.0, 35.0, 58000.0]], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m4qM0BHj2ov0",
+        "outputId": "20aa4d64-f50e-4e85-bcee-f94cbcb8c4e1"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.0, 1.0, 0.0, 50.0, 83000.0],\n",
+              "       [1.0, 0.0, 0.0, 44.0, 72000.0]], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_5QndjYn2kJo",
+        "outputId": "098b702b-13fa-4041-e7a9-0527a792b781"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 1, 1, 1, 0, 0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ygiLtQhH23Ih",
+        "outputId": "fa907d89-1c98-4f5a-b237-3a24f5b6b204"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feature Scaling\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc_x =  StandardScaler()\n",
+        "x_train = sc_x.fit_transform(x_train)\n",
+        "x_test = sc_x.transform(x_test)"
+      ],
+      "metadata": {
+        "id": "psyrgFcq24oo"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train"
+      ],
+      "metadata": {
+        "id": "qfXpLnjo2EPT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d7549b93-91b2-4fdd-ecad-c75f4d5fe78d"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.77459667, -0.57735027,  1.29099445,  0.21350363,  0.07120763],\n",
+              "       [ 1.29099445, -0.57735027, -0.77459667,  1.88440161,  2.03472003],\n",
+              "       [-0.77459667,  1.73205081, -0.77459667,  0.54768323,  0.3742188 ],\n",
+              "       [ 1.29099445, -0.57735027, -0.77459667,  0.04641383,  0.72571176],\n",
+              "       [-0.77459667, -0.57735027,  1.29099445, -1.62448414, -1.34688467],\n",
+              "       [-0.77459667,  1.73205081, -0.77459667, -1.12321475, -0.69238053],\n",
+              "       [-0.77459667, -0.57735027,  1.29099445,  0.34346236, -0.91054858],\n",
+              "       [ 1.29099445, -0.57735027, -0.77459667, -0.28776576, -0.25604444]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test"
+      ],
+      "metadata": {
+        "id": "9-KpRcnA2B6u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4be39ba-1755-4ad1-e8e6-4ce514c1bf69"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.77459667,  1.73205081, -0.77459667,  2.2185812 ,  2.47105613],\n",
+              "       [ 1.29099445, -0.57735027, -0.77459667,  1.21604242,  1.27113188]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying ML Model"
+      ],
+      "metadata": {
+        "id": "KvH_IqIN19qx"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Data Visualization"
+      ],
+      "metadata": {
+        "id": "ri7xeTwf-pKh"
+      },
+      "execution_count": 24,
       "outputs": []
     }
   ]
