--- a/python_day_1.ipynb
+++ b/python_day_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkQeomF1SsCPIqv/VnKCe+",
+      "authorship_tag": "ABX9TyNwDtvdsc79kbvnqvt8USHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +61,7 @@
         "id": "KOoR5bpGa_94",
         "outputId": "ebcf00f7-692c-45a4-cfe1-72333705bd6c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
         "id": "qELvCispc_sj",
         "outputId": "3a85f3ad-35b4-4719-f073-6b01247cbf29"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
         "id": "PcRkFZd7dBaT",
         "outputId": "23c31209-0013-49fc-b43f-23399bceffbe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +139,7 @@
         "id": "Ilm4LjaMdDld",
         "outputId": "d3649a81-dc35-4655-cb5f-bc80a091ace9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
         "id": "DJltjsRddKbl",
         "outputId": "ca2aa9f4-e116-4bd8-9dca-eca15c8fae95"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
         "id": "5HRXXYrodQAU",
         "outputId": "619b9105-10a6-4d6a-c7eb-51742729cb9f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +223,7 @@
         "id": "5aWDwCJtdVbs",
         "outputId": "362bcc26-ddb5-4292-8e30-15bef7bd9599"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +251,7 @@
         "id": "ivx5vCWydYxN",
         "outputId": "43925c54-d426-4570-ccaf-d99d31fb1e57"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "ZO3mYxANdiui"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
         "id": "j3W7ysYZdjVZ",
         "outputId": "ff9f1faf-c2ed-426d-b543-1a7b0adbae78"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "A8XFl0s3d7K4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
         "id": "gKjMdDTOeCII",
         "outputId": "dc8a7d1c-66a7-4398-e046-aa052ceef7bd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,9 +342,384 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = 20 # x is variable and 20 is the value of the variable "
+      ],
       "metadata": {
         "id": "BnSmHD1zeZmd"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W6_RA1u44U2U",
+        "outputId": "0d710e38-1895-49be-e96f-ed8ebd266261"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uK3cchls4ZEh",
+        "outputId": "92e21258-2e7d-4f43-e2f2-590a737353f0"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = \"Shruti\""
+      ],
+      "metadata": {
+        "id": "aZbAyzU74ale"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PLWh7c024hhK",
+        "outputId": "78b57fda-89e6-4f55-c62a-b3dee771f60c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = 13.5"
+      ],
+      "metadata": {
+        "id": "p9IOBajz4keK"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "623T9Pap4l3c",
+        "outputId": "a9608a29-a868-4e8a-9b5d-bb61e3fe9d5c"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = True"
+      ],
+      "metadata": {
+        "id": "iLP8g4lk4oBN"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vOfvIpaa4utw",
+        "outputId": "ba67277b-5547-4be6-c55e-c515dc04871f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Data Types\n",
+        "# Strings - Character or alphabets\n",
+        "# Float - decimal\n",
+        "# Integer - number\n",
+        "# boolean - logical - True or False"
+      ],
+      "metadata": {
+        "id": "dFeiBL-A4wwf"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 20+10 ; 100-80 ; 990/99 ; 85*10"
+      ],
+      "metadata": {
+        "id": "hobGmWvp5LbS"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(20+10)\n",
+        "print(100-80)\n",
+        "print(990/9)\n",
+        "print(85*10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CNv_wO7a5lbo",
+        "outputId": "4d507478-fcba-4043-8677-a507cfbbb3f0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "20\n",
+            "110.0\n",
+            "850\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math"
+      ],
+      "metadata": {
+        "id": "MQaxmGbz5tk8"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math.sqrt(64)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jc3CB0uZ5xpM",
+        "outputId": "98b1f47c-7215-4b32-cc39-36a0cbf9b631"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list1 = ['Shruti', 20, 13.5, True]\n",
+        "list1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n9ECLhNg54N5",
+        "outputId": "1086e564-4252-4a19-e143-e8391a6ef965"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Shruti', 20, 13.5, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list1[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MFeVve3w6gU4",
+        "outputId": "268df6e1-0c62-4c0f-f59d-afca309e708c"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Index starts with 0\n",
+        "list1[1] = 40"
+      ],
+      "metadata": {
+        "id": "tnSzYn1H6Jsl"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "usj8dDuZ6Qe_",
+        "outputId": "794bb7a6-fb97-4bbc-c82f-331213e15898"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Shruti', 40, 13.5, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hf5rvX166R9V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3n3nihDJ4sTX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LYbs7cT24iYS"
       },
       "execution_count": null,
       "outputs": []
